[Autofill Views] Fixing footer and separators

This CL addresses a few visual issues, mostly surrounding the footer:
- Each footer item should have a border at the top. These should not
  carry any extra padding.
- The model should not send a separator before the footer, since it
  would now be redundant.
- The gray background on the footer should extend all the way to the
  bottom of the popup. This is accomplished by removing the padding
  at the root level and adding it to a new container around the footer
  elements.

This also introduces the structure we will need when we later re-enable
scrolling, so that the "content" rows (non-footer) can scroll while the
footer remains "sticky."

Change-Id: I54b07c6a76dc07e230ec03e1762c09f77397ed6f
Bug: 844529
Reviewed-on: https://chromium-review.googlesource.com/1062708
Commit-Queue: Tommy Martino <tmartino@chromium.org>
Reviewed-by: Evan Stade <estade@chromium.org>
Reviewed-by: Fabio Tirelo <ftirelo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561287}
Former-commit-id: 9dfefe12fd3cdda36726ebc86111e4e32167ff40